# neuroai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
neuralbench-repo/: .gitignore  README.md  pyproject.toml
neuralbench-repo/.github/: CONTRIBUTING.md
neuralbench-repo/neuralbench/: __init__.py  aggregator.py  callbacks.py  cli.py  config_manager.py  data.py  experiment_config.py  main.py  model_factory.py  modules.py  pl_module.py  registry.py  sklearn_baseline.py  test_callbacks.py  test_cli.py  test_registry.py  test_sklearn_baseline.py  test_transforms.py  test_utils.py  transforms.py  utils.py
neuralbench-repo/neuralbench/defaults/: config.yaml  debug_study.yaml  downstream_wrappers.yaml  grid.yaml  metrics.py
neuralbench-repo/neuralbench/models/: atcnet.yaml  bdtcn.yaml  bendr.yaml  biot.yaml  cbramod.yaml  chance.yaml  cospectra_log_lr.yaml  cov_ts_lr.yaml  cov_ts_ridge.yaml  ctnet.yaml  deep4net.yaml  dummy.yaml  eegconformer.yaml  eegnet.yaml  fmri_linear.yaml  fmri_mlp.yaml  labram.yaml  luna.yaml  reve.yaml  shallow_fbcsp_net.yaml  simpleconv.yaml  simpleconv_time_agg.yaml  xdawn_ts_lr.yaml
neuralbench-repo/neuralbench/models/channel_mappings/: biot.json  labram.json  reve.json
neuralbench-repo/neuralbench/plots/: _constants.py  _filters.py  _models.py  _style.py  _task_metadata.py  bar_charts.py  benchmark.py  model_params.json  non_eeg.py  normalized_summary.py  plot_non_eeg.py  rank_chart.py  ranking.py  tables.py  test_plot_non_eeg.py  test_variability.py  utils.py
neuralbench-repo/neuralbench/plots/variability/: __init__.py  core_vs_full.py  full_variability_panel.py  rank_variability_matrix.py
neuralbench-repo/neuralbench/pretrained_weights/: README.md
neuralbench-repo/neuralbench/tasks/eeg/age/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/artifact/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/audiovisual_stimulus/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/clinical_event/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/cvep/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/dementia_diagnosis/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/depression_diagnosis/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/emotion/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/ern/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/image/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/lrp/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/mental_arithmetic/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/mental_imagery/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/mental_workload/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/mismatch_negativity/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/motor_execution/: config.yaml
neuralbench-repo/neuralbench/tasks/eeg/motor_imagery/: config.yaml
neuralfetch-repo/: README.md  pyproject.toml
neuralfetch-repo/neuralfetch/: download.py  test_download.py  test_moabb2025.py  test_studies.py  test_utils.py  utils.py
neuralfetch-repo/neuralfetch/studies/: albrecht2019increased.py  allen2022massive.py  bel2026petit.py  brennan2019hierarchical.py  chen2023large.py  dan2023bids.py  ghassemi2018you.py  gifford2022large.py  grootswagers2022human.py  hebart2023thingsmeg.py  hinss2023open.py  hollenstein2018zuco.py  kemp2000analysis.py  kueper2024eeg.py  li2022petit.py  liu2024eeg2video.py  miltiadous2023dice.py  moabb2025.py  mumtaz2018machine.py  nieuwland2018large.py  schalk2004bci.py  shirazi2024hbn.py  singh2021timing.py  tuh_eeg.py  zyma2019eeg.py
neuralfetch-repo/neuralfetch/studies/testing/: mne2013sample.py  test2023fmri.py  test2023meg.py  test2024eeg.py  test2024fnirs.py  test2025ieeg.py
neuralset-repo/: README.md  conftest.py  pyproject.toml
neuralset-repo/neuralset/: __init__.py  base.py  dataloader.py  segments.py  test_base.py  test_dataloader.py  test_segment_benchmark.py  test_segments.py  test_utils.py  utils.py
neuralset-repo/neuralset/events/: __init__.py  etypes.py  study.py  test_etypes.py  test_study.py  test_utils.py  utils.py  viz.py
neuralset-repo/neuralset/events/testing/: examplemultimodal.py  fakemulti.py  mne2013sample.py  test2023fmri.py
neuralset-repo/neuralset/events/transforms/: __init__.py  audio.py  basic.py  chunking.py  splitting.py  test_transforms.py  text.py  utils.py  video.py
neuralset-repo/neuralset/extractors/: __init__.py  audio.py  base.py  image.py  meta.py  neuro.py  test_audio.py  test_base.py  test_image.py  test_meta.py  test_neuro.py  test_text.py  test_video.py  text.py  video.py
neuralset-repo/neuralset/extractors/data/: huggingface-repos.txt
neuraltrain-repo/: README.md  pyproject.toml
neuraltrain-repo/neuraltrain/: __init__.py  base.py  test_config.py  test_utils.py  utils.py
neuraltrain-repo/neuraltrain/augmentations/: augmentations.py  test_augmentations.py
neuraltrain-repo/neuraltrain/losses/: __init__.py  base.py  losses.py  test_config.py  test_losses.py
neuraltrain-repo/neuraltrain/metrics/: __init__.py  base.py  metrics.py  test_config.py  test_metrics.py  utils.py
neuraltrain-repo/neuraltrain/models/: __init__.py  base.py  bendr.py  common.py  conformer.py  constant_predictor.py  conv_transformer.py  diffusion_prior.py  dummy_predictor.py  fmri_mlp.py  freqbandnet.py  green.py  labram.py  linear.py  luna.py  preprocessor.py  reve.py  simpleconv.py  simplerconv.py  sit.py  test_base.py  test_bendr.py  test_common.py  test_conformer.py  test_constant_predictor.py  test_conv_transformer.py  test_diffusion_prior.py  test_dummy_predictor.py  test_fmri_mlp.py  test_freqbandnet.py  test_green.py  test_labram.py  test_linear.py  test_luna.py  test_preprocessor.py  test_reve.py  test_simpleconv.py  test_simplerconv.py  test_sit.py  test_transformer.py  (+1 more)
neuraltrain-repo/neuraltrain/optimizers/: __init__.py  base.py  test_config.py
neuraltrain-repo/project_example/: README.md  main.py  pl_module.py  plot_figure.py
neuraltrain-repo/project_example/grids/: defaults.py  run_grid.py  test_run.py
(+242 files in other folders)
